--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,445 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+   @apply bg-white dark:bg-slate-900;
+   transition: 0.8s all ease-in-out;
+ }
+
+ .box-stat {
+  @apply w-[45%] md:w-[45%] lg:w-[17rem] flex flex-col h-32 md:h-44 rounded-xl p-4 flex;
+  background-image: linear-gradient(320deg, #8083ff 50%, #4E90EF);
+  background-size: 800px 500px;
+  background-repeat: no-repeat;
+}
+
+ .bg {
+  background-image: url('./assets/bg1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1000;
+ }
+ 
+ .bg2 {
+  background-image: url('./assets/bg2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1000;
+ }
+
+/* .data {
+  overflow: hidden;
+ }*/
+
+ .task-detail {
+  @apply bg-white;
+  transition: all 0.5s ease-in-out;
+  right: -100%;
+ }
+
+ .task-detail.open {
+  transition: all 0.5s ease-in;
+  right: 0;
+ }
+
+ .data::-webkit-scrollbar, .task-create-con::-webkit-scrollbar, .task-detail::-webkit-scrollbar {
+    @apply w-[2px] w-[5px];
+}
+
+.data::-webkit-scrollbar-thumb, .task-create-con::-webkit-scrollbar-thumb, .task-detail::-webkit-scrollbar-thumb {
+    @apply bg-purpleP rounded-lg
+  }
+
+
+/* Hide scrollbar arrows for WebKit browsers */
+.data::-webkit-scrollbar-thumb:hover, .task-create-con::-webkit-scrollbar-thumb:hover, .task-detail::-webkit-scrollbar-thumb:hover {
+    opacity: 0.8;
+  }
+ 
+.circle {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: linear-gradient(to right, #8083ff, #4D70EF);
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  z-index: 1;
+}
+
+.input-con {
+    @apply relative my-6 mx-2;
+}
+
+
+.input-con input {
+    transition: border-bottom-color 0.1s ease;
+    caret-color: purpleP;
+    @apply w-full h-14 py-2 px-4 text-sm border border-gray-500 outline-none rounded-xl text-gray-500 bg-transparent autofill:bg-transparent;
+}
+
+.pass-toggle{
+      color: #777;
+      font-size: 15px;
+      position: absolute;
+      right: 10px;
+      top: 19.5px;
+    }
+    
+.input-con input:focus,
+.input-con input:valid {
+  @apply border-purpleP border-[1.7px]
+}
+
+.input-con label {
+      pointer-events: none;
+      transition: top 0.2s ease, font-size 0.1s ease, color 0.1s ease;
+      @apply absolute top-[20px] left-0 left-[15px] text-sm text-gray-400 bg-white dark:bg-slate-900 rounded-lg py-0 px-2;
+    }
+
+    .input-con input:focus ~ label,
+    .input-con input:valid ~ label {
+      top: -8px;
+      color: purpleP;
+      font-size: 0.8rem;
+    }
+    
+.btn-auth {
+  @apply bg-purpleP w-full h-16 text-center rounded-lg text-white hover:opacity-80 text-lg;
+}
+
+.error-message {
+  @apply bg-red-300 bg-opacity-50 px-4 py-2 rounded-md text-red-600 border border-red-500 transition-all duration-200 ease-in-out my-4 mx-6 block;
+}
+
+.navbar {
+    @apply fixed top-0 w-full left-0 bg-white flex items-center justify-between px-6 py-4 shadow-sm z-[1000];
+    transition: 0.8s all ease-in-out;
+  }
+
+  .logo-items {
+    @apply flex items-center space-x-2 text-base font-semibold text-purpleP;
+  }
+
+  .search-bar {
+    @apply h-12 max-w-[430px] w-full hidden md:block ;
+  }
+
+  .search-bar input {
+    @apply h-full w-full rounded-full text-base outline-none focus:border-purpleP bg-white text-gray-500 border border-gray-300 px-5;
+  }
+
+  .navbar-content {
+    @apply flex items-center space-x-6;
+  }
+  
+  .navbar-content .i {
+    @apply cursor-pointer text-base text-gray-500;
+  }
+
+  .navbar-content .i:hover {
+    transform: scale(1.3);
+  }
+
+  .category-con {
+    @apply my-6 gap-y-12 flex flex-wrap w-[100%] justify-around md:justify-start md:gap-12;
+  }
+
+
+  .category-box {
+    @apply w-[98%] md:w-[17rem] lg:w-[20rem] flex flex-col h-48 md:h-52 rounded-xl bg-white shadow-lg shadow-gray-200 p-4;
+  }
+
+  .category-box:nth-child(2) {
+    @apply ml-0 md:-ml-[3rem];
+  }
+
+  .upcoming {
+    @apply my-2 bg-[rgba(255,255,255,0.7)] py-2 rounded-lg pl-8;
+    background-image: linear-gradient(to right, #8083ff, #4D70EF);
+    background-size: 7px 75px;
+    background-repeat: no-repeat;
+  }
+  
+  .menu {
+    transform: scale(0);
+    transition: 0.25s ease-in;
+    z-index: 1;
+  } 
+
+.toggle {
+  transform: scale(1);
+  transition: all 0.25s ease-in;
+}
+
+.btn2 {
+  @apply grid place-content-center text-center w-1/2 h-14 text-lg rounded-lg text-white hover:scale-[1.033];
+  background-image: linear-gradient(to right, #8083ff 48%, #4D70EF);
+}
+
+.new::after {
+    content: "";
+    position: absolute;
+    bottom: -10px; /* Adjust the position of the curve */
+    left: 50%;
+    width: 70%; /* Adjust the width of the line */
+    height: 5px; /* Adjust the thickness of the line */
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    transform: translateX(-50%) rotate(180deg);
+    @apply bg-purpleP;
+  }
+
+  .line::after {
+    content: "";
+    position: absolute;
+    bottom: -10px; /* Adjust the position of the curve */
+    left: 50%;
+    width: 100%; /* Adjust the width of the line */
+    height: 1px; /* Adjust the thickness of the line */
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    transform: translateX(-50%) rotate(180deg);
+    @apply bg-gray-400 dark:bg-gray-600;
+  }
+  .task-input {
+    @apply w-full h-12 bg-transparent border rounded-lg border-gray-300 dark:border-gray-500 outline-none focus:border-purpleP text-sm text-slate-600 dark:text-slate-200 px-3;
+  }
+
+  .task-label {
+    @apply text-left text-sm dark:text-gray-300 font-semibold;
+  }
+
+  .task-button {
+      @apply w-32 h-10 px-2 py-4 grid place-content-center text-sm text-center bg-gray-300 rounded-lg text-gray-600 outline-none;
+    }
+  
+  .category-button {
+      flex: 0 0 10rem;
+      @apply h-10 border border-gray-400 px-2 py-4 grid place-content-center text-sm text-center bg-transparent rounded-lg text-gray-600 dark:text-gray-400 outline-none;
+    }
+
+  .category-button.active {
+    @apply bg-purpleP text-white;
+  }
+
+  .task-button.active {
+        @apply border border-[2.7px] border-gray-400 dark:border-gray-300 text-white;
+  }
+
+  .task-list {
+    @apply bg-gradient-to-r from-purple-300 to-blue-300 dark:from-purple-800 dark:to-blue-800;
+  }
+
+  .task-label-2 {
+    @apply text-sm text-gray-700 dark:text-gray-300 font-semibold;
+  }
+
+/*  .task-list:hover {
+    transform: scale(1.013);
+  }*/
+
+
+
+  .error-message {
+    @apply bg-red-300 bg-opacity-50 w-full -ml-0.5 px-4 py-2 rounded-lg text-sm h-10 text-red-600 dark:text-red-200 border border-red-500 transition-all duration-200 ease-in-out mb-2;
+  }
+
+  .category-list {
+  display: flex;
+  overflow-x: auto;
+  padding: 10px;
+  margin: 0 0 4rem 0;
+}
+
+
+.category-list-box {
+  flex: 0 0 300px;
+  height: 160px;
+  padding: 30px;
+  margin-right: .8rem;
+  background: var(--white);
+  border-radius: 20px;
+  display: block;
+  /*box-shadow: 0 5px 7px rgba(100,100,100,0.23);*/
+  background-image: linear-gradient(to right, #8083ff, #4D70EF);
+  background-size: 330px 200px;
+  background-repeat: no-repeat;
+}
+
+.category-list::-webkit-scrollbar, .category-list-con::-webkit-scrollbar {
+    height: 4px;
+}
+
+.category-list::-webkit-scrollbar-thumb, .category-list-con::-webkit-scrollbar-thumb {
+    background: #8083ff;
+    border-radius: 10px;
+  }
+
+
+/* Hide scrollbar arrows for WebKit browsers */
+.category-list::-webkit-scrollbar-thumb:hover, .category-list-con::-webkit-scrollbar-thumb {
+    opacity: 0.8;
+  }
+  /* sidebar */
+.sidebar {
+  background-color: white;
+  width: 260px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 40px 4px 80px 4px;
+  z-index: 100;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  box-shadow: 0 0 1px #777;
+  transition: all 0.8s ease;
+}
+
+.sidebar.close {
+  padding: 60px 0;
+  @apply w-0 sm:w-[80px];
+}
+.sidebar:hover {
+  overflow-y: auto;
+}
+
+
+.sidebar::-webkit-scrollbar {
+    width: 5px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  @apply dark:bg-slate-800;
+    background: #aaa;
+    border-radius: 10px;
+  }
+
+
+/* Hide scrollbar arrows for WebKit browsers */
+.sidebar::-webkit-scrollbar-thumb:hover {
+    @apply bg-purpleP;
+  }
+.menu_content {
+  position: relative;
+}
+.menu_title {
+  margin: 15px 0;
+  padding: 0 20px;
+  font-size: 18px;
+}
+.sidebar.close .menu_title {
+  padding: 6px 30px;
+}
+.menu_title::before {
+  color: #777;
+  white-space: nowrap;
+  @apply dark:text-gray-400;
+}
+.menu_dashboard::before {
+  content: "General";
+}
+
+.menu_setting::before {
+  content: "";
+}
+.sidebar.close .menu_title::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 18px;
+  border-radius: 12px;
+  background: #777;
+}
+.menu_items {
+  padding: 0;
+  list-style: none;
+}
+
+
+.navlink_icon {
+  position: relative;
+  font-size: 22px;
+  min-width: 50px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 6px;
+}
+.navlink_icon::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: calc(100% + 100px);
+  left: -20px;
+}
+.navlink_icon:hover {
+  background: #8083ff;
+}
+.sidebar .nav_link {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 5px 15px;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #777;
+  white-space: nowrap;
+  transform: scale(0.9);
+}
+.sidebar.close .navlink {
+  display: none;
+}
+.nav_link:hover {
+  color: white;
+  background: #8083ff;
+}
+.sidebar.close .nav_link:hover {
+  color: white;
+}
+
+.bottom_content {
+  position: fixed;
+  bottom: 60px;
+  left: 0;
+  width: 260px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.bottom {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  left: 0;
+  justify-content: space-around;
+  padding: 18px 0;
+  text-align: center;
+  width: 100%;
+  color: #777;
+  border-top: 1px solid #777;
+  background-color: white;
+}
+.bottom i {
+  font-size: 20px;
+}
+.bottom span {
+  font-size: 18px;
+}
+.sidebar.close .bottom_content {
+  width: 0px;
+  left: -20px;
+
+}
+.sidebar.close .bottom span {
+  display: none;
+}
+
+
+.text-gradient {
+	background-clip: text;
+	-webkit-background-clip: text;
+	color: transparent;
+	background-image: linear-gradient(45deg , #4D70EF, #8083ff);
+}
