--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ body {
 }
 
 .data::-webkit-scrollbar-thumb, .task-create-con::-webkit-scrollbar-thumb, .task-detail::-webkit-scrollbar-thumb {
-    @apply bg-purpleP rounded-lg
+    @apply bg-vibrantGreen rounded-lg
   }
 
 
@@ -78,8 +78,8 @@ body {
 
 .input-con input {
     transition: border-bottom-color 0.1s ease;
-    caret-color: purpleP;
-    @apply w-full h-14 py-2 px-4 text-sm border border-gray-500 outline-none rounded-xl text-gray-500 bg-transparent autofill:bg-transparent;
+    caret-color: vibrantGreen;
+    @apply w-full h-14 py-2 px-4 text-sm border border-gray outline-none rounded-xl text-gray bg-transparent autofill:bg-transparent;
 }
 
 .pass-toggle{
@@ -92,24 +92,24 @@ body {
     
 .input-con input:focus,
 .input-con input:valid {
-  @apply border-purpleP border-[1.7px]
+  @apply border-vibrantGreen border-[1.7px]
 }
 
 .input-con label {
       pointer-events: none;
       transition: top 0.2s ease, font-size 0.1s ease, color 0.1s ease;
-      @apply absolute top-[20px] left-0 left-[15px] text-sm text-gray-400 bg-white dark:bg-slate-900 rounded-lg py-0 px-2;
+      @apply absolute top-[20px] left-0 left-[15px] text-sm text-gray bg-white dark:bg-slate-900 rounded-lg py-0 px-2;
     }
 
     .input-con input:focus ~ label,
     .input-con input:valid ~ label {
       top: -8px;
-      color: purpleP;
+      color: vibrantGreen;
       font-size: 0.8rem;
     }
     
 .btn-auth {
-  @apply bg-purpleP w-full h-16 text-center rounded-lg text-white hover:opacity-80 text-lg;
+  @apply bg-vibrantGreen w-full h-16 text-center rounded-lg text-white hover:opacity-80 text-lg;
 }
 
 .error-message {
@@ -122,7 +122,7 @@ body {
   }
 
   .logo-items {
-    @apply flex items-center space-x-2 text-base font-semibold text-purpleP;
+    @apply flex items-center space-x-2 text-base font-semibold text-vibrantGreen;
   }
 
   .search-bar {
@@ -130,7 +130,7 @@ body {
   }
 
   .search-bar input {
-    @apply h-full w-full rounded-full text-base outline-none focus:border-purpleP bg-white text-gray-500 border border-gray-300 px-5;
+    @apply h-full w-full rounded-full text-base outline-none focus:border-vibrantGreen bg-white text-gray border border-gray-300 px-5;
   }
 
   .navbar-content {
@@ -138,7 +138,7 @@ body {
   }
   
   .navbar-content .i {
-    @apply cursor-pointer text-base text-gray-500;
+    @apply cursor-pointer text-base text-gray;
   }
 
   .navbar-content .i:hover {
@@ -191,7 +191,7 @@ body {
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     transform: translateX(-50%) rotate(180deg);
-    @apply bg-purpleP;
+    @apply bg-vibrantGreen;
   }
 
   .line::after {
@@ -204,10 +204,10 @@ body {
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     transform: translateX(-50%) rotate(180deg);
-    @apply bg-gray-400 dark:bg-gray-600;
+    @apply bg-gray dark:bg-gray-600;
   }
   .task-input {
-    @apply w-full h-12 bg-transparent border rounded-lg border-gray-300 dark:border-gray-500 outline-none focus:border-purpleP text-sm text-slate-600 dark:text-slate-200 px-3;
+    @apply w-full h-12 bg-transparent border rounded-lg border-gray-300 dark:border-gray outline-none focus:border-vibrantGreen text-sm text-slate-600 dark:text-slate-200 px-3;
   }
 
   .task-label {
@@ -220,15 +220,15 @@ body {
   
   .category-button {
       flex: 0 0 10rem;
-      @apply h-10 border border-gray-400 px-2 py-4 grid place-content-center text-sm text-center bg-transparent rounded-lg text-gray-600 dark:text-gray-400 outline-none;
+      @apply h-10 border border-gray px-2 py-4 grid place-content-center text-sm text-center bg-transparent rounded-lg text-gray-600 dark:text-gray outline-none;
     }
 
   .category-button.active {
-    @apply bg-purpleP text-white;
+    @apply bg-vibrantGreen text-white;
   }
 
   .task-button.active {
-        @apply border border-[2.7px] border-gray-400 dark:border-gray-300 text-white;
+        @apply border border-[2.7px] border-gray dark:border-gray-300 text-white;
   }
 
   .task-list {
@@ -323,7 +323,7 @@ body {
 
 /* Hide scrollbar arrows for WebKit browsers */
 .sidebar::-webkit-scrollbar-thumb:hover {
-    @apply bg-purpleP;
+    @apply bg-vibrantGreen;
   }
 .menu_content {
   position: relative;
@@ -339,7 +339,7 @@ body {
 .menu_title::before {
   color: #777;
   white-space: nowrap;
-  @apply dark:text-gray-400;
+  @apply dark:text-gray;
 }
 .menu_dashboard::before {
   content: "General";
