--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,53 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
+}
 
 body {
-   @apply bg-white dark:bg-slate-900;
-   transition: 0.8s all ease-in-out;
- }
+  @apply bg-white text-black w-full h-screen overflow-x-hidden;
+}
+
+.navlink {
+  @apply text-[0.9rem] text-white lg:text-gray relative cursor-pointer; 
+}
+
+.navlink::before {
+content: '';
+@apply w-[2rem] h-[0.2rem] bg-gradient-to-r from-lightGreen to-vibrantGreen rounded-lg absolute bottom-[-0.6rem] opacity-0 translate-x-[-1.5rem] transition duration-300;
+} 
+
+.navlink:hover::before {
+@apply w-[100%] translate-x-[0] opacity-100;
+}
+
+.menu-btn {
+@apply w-[2.5rem] h-[2.5rem] text-[1.2rem] flex items-center justify-center border-none rounded-lg text-white cursor-pointer lg:hidden hover:text-white hover:bg-black hover:border hover:border-[#0F2E0E] bg-opacity-50  bg-vibrantGreen;
+/*background: linear-gradient(90deg, #2F942D -0.13%,  #0F2E0E 99.87%);*/
+}
+
+.menu-btn2 {
+@apply w-[8rem] h-[2.8rem] text-[14px] flex items-center justify-center border-none text-black rounded-xl cursor-pointer transition-all duration-300 hover:scale-[1.04] text-white;
+}
+
+.menu-btn:hover {
+background: #000;
+transition: 0.3s all ease;
+}
+
+.mobile-menu {
+@apply w-screen h-screen bg-[rgba(0,0,0,0.3)] fixed left-0 top-0 z-[999] opacity-0;
+box-shadow: 0px 29px 80px rgba(0, 0, 0, 0.3);
+transition: all 0.3s ease;
+transform: translateX(-100vw);
+}
+
+.active {
+opacity: 1;
+transform: translateX(0);
+}
 
  .box-stat {
   @apply w-[45%] md:w-[45%] lg:w-[17rem] flex flex-col h-32 md:h-44 rounded-xl p-4 flex;
