--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .navlink {
-  @apply text-[0.9rem] text-white lg:text-gray relative cursor-pointer; 
+  @apply text-[0.9rem] text-gray relative cursor-pointer; 
 }
 
 .navlink::before {
@@ -27,7 +27,7 @@ content: '';
 }
 
 .menu-btn {
-@apply w-[2.5rem] h-[2.5rem] text-[1.2rem] flex items-center justify-center border-none rounded-lg text-white cursor-pointer lg:hidden hover:text-white hover:bg-black hover:border hover:border-[#0F2E0E] bg-opacity-50  bg-vibrantGreen;
+@apply w-[2.5rem] h-[2.5rem] text-[1.2rem] flex items-center justify-center border-none rounded-lg text-white cursor-pointer lg:hidden hover:bg-black hover:border hover:border-[#0F2E0E] bg-vibrantGreen;
 /*background: linear-gradient(90deg, #2F942D -0.13%,  #0F2E0E 99.87%);*/
 }
 
