--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ transform: translateX(0);
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     transform: translateX(-50%) rotate(180deg);
-    @apply bg-vibrantGreen;
+    @apply bg-orangeYellow;
   }
 
   .line::after {
