--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,27 @@ body {
   @apply bg-white text-black w-full h-screen overflow-x-hidden;
 }
 
+
+.menu-icon {
+  width: 24px;
+  height: 18px;
+  position: relative;
+  cursor: pointer;
+}
+
+.menu-icon span {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  height: 3px;
+  background-color: currentColor;
+  margin-bottom: 5px;
+}
+
+.menu-icon span:last-child {
+  margin-bottom: 0;
+}
+
 .navlink {
   @apply text-[0.9rem] text-gray relative cursor-pointer; 
 }
