--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   width: 100%;
   align-items: center;
   height: 3px;
-  background-color: currentColor;
+  background-color: gray;
   margin-bottom: 5px;
 }
 
