--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ body {
   margin-bottom: 5px;
 }
 
+.main-btn {
+  @apply inline-flex h-16 animate-shimmer items-center justify-center rounded-2xl border-none bg-[linear-gradient(110deg,#00c158,45%,#7ad67f,55%,#00c158)] bg-[length:200%_100%] px-16 font-medium text-white transition-colors focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-offset-2 focus:ring-offset-slate-50;
+}
+
 .menu-icon span:last-child {
   margin-bottom: 0;
 }
