--- a/src/index.css
+++ b/src/index.css
@@ -574,7 +574,7 @@ transform: translateX(0);
 
     /* START of Common */
   .container {
-    @apply mx-auto max-w-[1252px] px-16 max-xl:px-10 max-lg:px-6 max-sm:px-4;
+    @apply mx-auto max-w-[1252px] pl-6;
   }
 
   .caption {
